# internal/modules/peserta/routes/peserta_routes.go
@@ -19,12 +19,12 @@ func SetupPesertaRoutes(app *fiber.App, db *gorm.DB) {
 	peserta := api.Group("/peserta")
 
 	peserta.Post("/", middleware.JWTAuth(), ctrl.CreatePeserta)
-	peserta.Get("/", ctrl.GetAllPeserta)
+	peserta.Get("/", middleware.JWTAuth(), ctrl.GetAllPeserta)
 	peserta.Get("/template", middleware.JWTAuth(), ctrl.DownloadTemplate)
 	peserta.Post("/import", middleware.JWTAuth(), ctrl.ImportPesertaFromExcel)
 	peserta.Get("/kartu-ujian/:id_kelas", middleware.JWTAuth(), ctrl.DownloadKartuUjian)
 	peserta.Delete("/", middleware.JWTAuth(), ctrl.DeleteAllPeserta)
-	peserta.Get("/:id", ctrl.GetPesertaByID)
+	peserta.Get("/:id", middleware.JWTAuth(), ctrl.GetPesertaByID)
 	peserta.Put("/:id", middleware.JWTAuth(), ctrl.UpdatePeserta)
 	peserta.Delete("/:id", middleware.JWTAuth(), ctrl.DeletePeserta)
 	peserta.Patch("/:id/restore", middleware.JWTAuth(), ctrl.RestorePeserta)
